[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/WanderController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/WhiteColorShader.tres" type="Shader" id=2]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Graphics/Shadows/SmallShadow.png" type="Texture" id=5]
[ext_resource path="res://Scenes/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Hitbox.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=8]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.0
height = 6.0

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[sub_resource type="CircleShape2D" id=11]
radius = 29.2005

[sub_resource type="CircleShape2D" id=12]
radius = 50.0

[sub_resource type="Animation" id=13]
length = 0.001

[sub_resource type="Animation" id=14]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 1.24825, 2.87817 )

[sub_resource type="Animation" id=17]
resource_name = "Attack1Anim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.26022, 2.87817 ), Vector2( 14.5973, 2.87817 ), Vector2( 1.6408, 2.87817 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.28889, -0.117985 ), Vector2( 14.6259, -0.117985 ), Vector2( 1.66947, -0.117985 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.24825, 2.87817 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.53857, -0.117985 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -0.18824 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 11.8118 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 7 )]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 12.9142 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, -13 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -0.243301 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
visible = false
shape = SubResource( 11 )

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource( 11 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 1 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/start = SubResource( 14 )
anims/stop = SubResource( 15 )

[node name="Attack1" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = false
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack1"]
position = Vector2( 1.53857, -0.117985 )
shape = SubResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Attack1"]
anims/Attack1Anim = SubResource( 17 )
anims/RESET = SubResource( 18 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_AttackZone_body_exited"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="animation_finished" from="Attack1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
